2004-11-20  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/define-markup-commands.scm (fill-line): use
	stack-stencils. This fixes problems with putting already centered
	stencils in a line.

	* VERSION: release 2.5.1

	* lily/bar-line.cc (get_staff_bar_size): add line thickness.

2004-11-19  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* input/example-[1-3].ly: simplify.

	* lily/cluster-engraver.cc (try_music): react to busy-playing-event

	* scm/output-ps.scm (new-text): new function. Use glyphshow to
	show glyphs.

	* scm/encoding.scm (decode-byte-string): new function.

	* scripts/convert-ly.py (conv): add warning about
	set-global-staff-size.

	* Doxyfile: add. 

	* scripts/convert-ly.py (conv): add raggedlastbottom rule
	(conv): warn for TextSpanner split.
	(conv): warn for textheight.

2004-11-19  Jan Nieuwenhuizen  <janneke@gnu.org>

	* GNUmakefile.in (install-WWW): Invoke install-info, so that when
	building the documentation, info with images are installed.
	(final-install): Fix description.  Mention sourcing of login
	scripts (instead of running).

2004-11-18  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Debian lmodern support.  Note that LilyPond will issue warnings
	
	    no such encoding: "FontSpecific"

	  The font selection mechanism wants to get the encoding from the
	  font itself, but the idea of lmodern is that it is usable with
	  different encodings, ie, Lily should get the encoding from the
	  font tree, rather than the font itself.  This would require some
	  more work.
	
	* configure.in: Test for and accept lmodern if EC fonts not found.

	* scm/framework-tex.scm (font-load-command): TeX font name
	mangling for latin1 encoded cork-lm fonts.
	(convert-to-ps): Load lm.map if available.

	* ly/paper-defaults.ly: Use cork-lm encoding if ec is not
	available.

	* scm/encoding.scm (coding-alist): Add cork-lm encoding.

	* scm/font.scm: Add header.  Autoload cork-lm and ec fonts if
	available.

	* lily/kpath.cc (ly_kpathsea_find_file): Rename.  Do not use