@@ -1,5 +1,7 @@
 2004-11-20  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* flower/interval.cc (T_to_string): gcc4 fixes.
+
 	* scm/define-markup-commands.scm (fill-line): use
 	stack-stencils. This fixes problems with putting already centered
 	stencils in a line.
